Added search feature

--- a/QuickNotes-CRUD/frontend/index.html
+++ b/QuickNotes-CRUD/frontend/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>My Quick Notes</h1>
+    <div class="search-container">
+        <input type="text" id="searchInput" placeholder="Search notes..." oninput="handleSearch()">
+    </div>
     <input type="text" id="noteInput" placeholder="Kuch likhiye...">
     <button onclick="saveNote()">Save Note</button>
 
